name:                bindings-saga-cmd
version:             0.0.1.0
synopsis:            Wrapping saga_cmd
homepage:            https://github.com/michelk/bindings-saga-cmd
license:             GPL-3
license-file:        LICENSE
author:              Michel Kuhlmann
maintainer:          michel.kuhlmann@tkconsult.ch
category:            Math
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:   Math.Geometry.Saga.Types
                     Math.Geometry.Saga.Cmd
                     Math.Geometry.Saga.Data
                     Math.Geometry.Saga.Utils
                     Math.Geometry.Saga.LUT
  build-depends:     base,
                     filepath,
                     process,
                     containers,
                     directory
  hs-source-dirs:    src

executable sagaPipe
  main-is:           sagaPipe.hs
  build-depends:     base,
                     filepath,
                     cmdargs,
                     process,
                     text,
                     containers,
                     directory,
                     bindings-saga-cmd
  hs-source-dirs:    src

executable sagaTopo
  main-is:           sagaTopo.hs
  build-depends:     base,
                     filepath,
                     cmdargs,
                     process,
                     text,
                     containers,
                     directory,
                     bindings-saga-cmd
  hs-source-dirs:    src

executable sagaLut
  main-is:           sagaLut.hs
  build-depends:     base,
                     bindings-saga-cmd
  hs-source-dirs:    src
