name:                saga-cmd-wrapper
version:             0.0.0.1
synopsis:            Wrapping saga_cmd
-- description:         
homepage:            https://github.com/michelk/sagaCmdWrapper
license:             GPL-3
license-file:        LICENSE
author:              Michel Kuhlmann
maintainer:          michel.kuhlmann@tkconsult.ch
-- copyright:           
category:            Math
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Math.Geometry.Saga.Cmd
  -- other-modules:       
  build-depends:       base,
                       filepath,
                       process,
                       directory
  hs-source-dirs:      src
  

--executable demConv 
--  main-is:           demConv.hs
--  -- other-modules:       
--  build-depends:     base,
--                     filepath, 
--                     cmdargs,
--                     process,
--                     text,
--                     unordered-containers,
--                     saga-cmd-wrapper
--  hs-source-dirs:    src
