name:                saga-cmd-wrapper
version:             0.0.1.0
synopsis:            Wrapping saga_cmd
-- description:         
homepage:            https://github.com/michelk/sagaCmdWrapper
license:             GPL-3
license-file:        LICENSE
author:              Michel Kuhlmann
maintainer:          michel.kuhlmann@tkconsult.ch
-- copyright:           
category:            Math
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Math.Geometry.Saga.Types
                       Math.Geometry.Saga.Cmd
                       Math.Geometry.Saga.Chain
                       Math.Geometry.Saga.Data
                       Math.Geometry.Saga.Utils
                       Math.Geometry.Saga.LUT
  -- other-modules:       
  build-depends:       base,
                       filepath,
                       process,
                       containers,
                       directory
  hs-source-dirs:      src
  

executable sagaChain
  main-is:           sagaChain.hs
  -- other-modules:       
  build-depends:     base,
                     filepath, 
                     cmdargs,
                     process,
                     text,
                     containers,
                     directory,
                     saga-cmd-wrapper
  hs-source-dirs:    src

executable sagaTopo
  main-is:           sagaTopo.hs
  -- other-modules:       
  build-depends:     base,
                     filepath, 
                     cmdargs,
                     directory,
                     containers,
                     process,
                     saga-cmd-wrapper
  hs-source-dirs:    src
