name:                saga-cmd
version:             0.3
synopsis:            Wrapping saga_cmd
description:         A simple wrapper around the command-line version of the GIS-program saga
homepage:            https://github.com/michelk/saga-cmd.hs

license:             GPL-3
license-file:        LICENSE
author:              Michel Kuhlmann
maintainer:          michel.kuhlmann@tkconsult.ch
category:            Math
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:     git
  location: https://github.com/michelk/saga-cmd.hs

library
  exposed-modules:   Gis.Saga.Types
                     Gis.Saga.Cmd
                     Gis.Saga.Data
                     Gis.Saga.Utils
                     Gis.Saga.LUT
                     Gis.Saga.Doc
                     Gis.Saga.Node
                     Gis.Saga.Commands
  build-depends:     base >=4.3 && < 5,
                     filepath,
                     process,
                     containers,
                     directory,
                     unix,
                     turtle
  hs-source-dirs:    src

executable sagaPipe
  main-is:           sagaPipe.hs
  build-depends:     base  >=4.3 && < 5,
                     filepath,
                     cmdargs,
                     process,
                     text,
                     containers,
                     directory,
                     unix,
                     saga-cmd
  hs-source-dirs:    src

executable shpPrepMeshing
  main-is:           shpPrepMeshing.hs
  build-depends:     base
                    ,saga-cmd
                    ,turtle
  hs-source-dirs:    src

executable sagaTopo
  main-is:           sagaTopo.hs
  build-depends:     base  >=4.3 && < 5,
                     filepath,
                     cmdargs,
                     process,
                     text,
                     containers,
                     directory,
                     unix,
                     saga-cmd
  hs-source-dirs:    src

executable sagaLut
  main-is:           sagaLut.hs
  build-depends:     base  >=4.3 && < 5,
                     saga-cmd
  hs-source-dirs:    src
